fixed the jumping menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,11 @@
     font-family: 'Architects Daughter', cursive;
   }
 }
+/* 
+* {
+  outline: 1px solid red;
+  overflow-x: visible;
+} */
 
 body {
   margin: 0;
@@ -25,7 +30,7 @@ html {
   .font-gloria {
     font-family: var(--font-gloria);
   }
-  
+
   .font-verdana {
     font-family: 'Verdana', sans-serif;
   }
